--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
-# General
+# a .gitignore file specifies intentionally untracked files that Git should ignore
+# files already tracked by Git are not affected
+#
+# git-scm.com/docs/gitignore
+
+# general
 .DS_Store
 .AppleDouble
 .LSOverride
 
-# Icon must end with two \r
-Icon
+# icon must end with two \r
+Icon
 
-# Thumbnails
+# thumbnails
 ._*
 
-# Files that might appear in the root of a volume
+# files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
 .Spotlight-V100
@@ -18,7 +23,7 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
-# Directories potentially created on remote AFP share
+# directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
 Network Trash Folder
